--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,43 @@
+---
+import "../styles/global.css";
+import Header from "../components/Header.astro";
+// Supports weights 100-900
+import "@fontsource-variable/onest";
+interface Props{
+  title:string
+  description: string
+}
+const{ description, title}=Astro.props
+---
+
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={description} />
+    <title>Santiago Portfolio</title>
+  </head>
+  <body class="relative bg-[#000] text-white min-h-screen flex flex-col">
+    <Header class="relative z-10 bg-black" />
+
+    <main class="relative flex-grow z-0">
+      <div class="fixed inset-0 z-[-2] animate-breathing-top-light"></div>
+
+      <slot />
+    </main>
+  </body>
 </html>
 
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
+<style is:global>
+  :root {
+    color-scheme: light dark;
+  }
+  html {
+    font-family: "Onest Variable", system-ui, sans-serif;
+  }
+  body {
+    background: transparent;
+  }
 </style>
