Agregar experiencia algunos links y correción de errores funcionales y visuales

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import BriefcaseIcon from "../components/icons/BriefcaseIcon.astro";
 
 <Layout
   title="Portfolio de Santiago Benítez Álvarez - Desarrollador y Programador web"
-  description="Contratame a Santiago para crear tu aplicación Web. Desarrollador Web y de Contenido. Especializado en crear webs unicas"
+  description="Contrata a Santiago para crear tu aplicación Web. Desarrollador Web y de Contenido. Especializado en crear webs unicas"
 >
   <main>
     <SectionConteiner class="py-44 pb-24">
@@ -28,23 +28,23 @@ import BriefcaseIcon from "../components/icons/BriefcaseIcon.astro";
         class="ml-3 text-4xl md:text-5xl font-semibold text-white drop-shadow-[0_2px_6px_rgba(173,216,230,0.5)]
     mb-12 animate-fade-in tracking-wide"
       >
-        Hey, soy Santiago Benítez Álvarez
+        Hey, I'm Santiago Benítez Álvarez
         <a
           href="https://es.linkedin.com/in/santiagosba"
           target="_blank"
           rel="noopener"
           class="w-full overflow-x-auto whitespace-nowrap relative -top-1.5 ml-2 drop-shadow-[0_2px_6px_rgba(173,216,230,0.5)] animate-fade-in tracking-wide"
         >
-          <Badge>Disponible para Trabajar</Badge>
+          <Badge>Open to work</Badge>
         </a>
       </h1>
       <h2
         class="ml-3 text-4xl md:text-2xl font-semibold text-white drop-shadow-[0_2px_6px_rgba(173,216,230,0.5)]
     mb-12 animate-fade-in tracking-wide"
       >
-        <span>Más de dos años de experiencia.</span><span class="text-blue-300">
-          Desarrollador Web y Creador de Contenido.</span
-        > De
+        <span>More of two years of experience.</span><span class="text-blue-300">
+          Web Developer and Content Creator.</span
+        > Based in
         <span class="text-red-300"
           >Barcelona, España <img
             src="https://flagcdn.com/es.svg"
@@ -53,7 +53,7 @@ import BriefcaseIcon from "../components/icons/BriefcaseIcon.astro";
           /></span
         >
         . <span class="opacity-80"
-          >Especializado en crear aplicaciones únicas</span
+          >Specialized in creating unique applications.</span
         >
       </h2>
 
@@ -65,11 +65,12 @@ import BriefcaseIcon from "../components/icons/BriefcaseIcon.astro";
           <LinkedinIcon class="w-5 h-5 icon-glow" />
         </SocialPill>
 
-        <SocialPill href="https://github.com/tuusuario" label="GitHub">
+        <SocialPill href="https://github.com/Santiagosba" label="GitHub">
           <GitHubIcon class="w-5 h-5 icon-glow" />
         </SocialPill>
 
-        <SocialPill
+        <!--Instagram y x ocultos de momento ya que no son todavía de trabajo-->
+        <!-- <SocialPill
           href="https://www.instagram.com/tuusuario"
           label="Instagram"
         >
@@ -78,9 +79,9 @@ import BriefcaseIcon from "../components/icons/BriefcaseIcon.astro";
 
         <SocialPill href="https://x.com/tuusuario">
           <XIcon class="w-5 h-5 icon-glow" />
-        </SocialPill>
+        </SocialPill> -->
 
-        <SocialPill href="mailto:tuemail@ejemplo.com" label="Email">
+        <SocialPill href="mailto:santiagosba888@gmail.com" label="Email">
           <Mailicon class="w-5 h-5 icon glow" />
         </SocialPill>
 
@@ -88,7 +89,7 @@ import BriefcaseIcon from "../components/icons/BriefcaseIcon.astro";
       </nav>
     </SectionConteiner>
 
-    <SectionConteiner>
+    <SectionConteiner id="Experience">
       <h2
         class="mt-28 ml-3 text-4xl md:text-5xl font-semibold text-white drop-shadow-[0_2px_6px_rgba(173,216,230,0.5)]
     mb-12 animate-fade-in tracking-wide flex items-center gap-2"
