--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -3,24 +3,29 @@ import ExperienceItem from "./ExperienceItem.astro";
 
 const EXPERIENCE = [
   {
-    date: "February 2022",
-    title: "Application UI code in Tailwind CSS",
-    description:
-      " Get access to over 20+ pages including a dashboard layout, charts, kanban board, calendar, and pre-order E-commerce & Marketing pages. ",
-    link: "#",
+    date: "March 2024 - November 2024",
+    title: "Internship Agreement - Escola Tabor",
+    description: [
+      
+      "Maintained and updated the school’s website using WordPress.",
+      "Developed a new school website from scratch using Wix.",
+      "Designed and launched a new Moodle platform for parent-teacher-student communication.",
+      "Used technologies including WordPress, Moodle, PHP, HTML, CSS, JavaScript, and MySQL.",
+      "Managed hosting and domain setup with IONOS, using cPanel and FTP tools like FileZilla."
+    ],
+    link: "https://www.tabor.cat/",
   },
   {
-    date: "March 2022",
-    title: "Marketing UI design in Figma",
-    description:
-      "All of the pages and components are first designed in Figma and we keep a parity between the two versions even as we update the project.",
-  },
-  {
-    date: "April 2022",
-    title: "E-Commerce UI code in Tailwind CSS",
-    description:
-      "Get started with dozens of web components and interactive elements built on top of Tailwind CSS.",
-  },
+    date: "June 2024 - December 2024",
+    title: "Sales and IT Advisor – Plaza Cataluña",
+    description: [
+      "Provided personalized customer service and technical advice on technology products.",
+      "Troubleshot basic technical issues and offered user support.",
+      "Managed cash register, inventory, and organized store operations.",
+      "Developed strong communication, problem-solving, and sales skills."
+    ],
+    
+  }
 ];
 ---
 
