--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -1,7 +1,7 @@
 ---
 interface Props {
   title: string;
-  description: string;
+  description: string | string[];
   link?: string;
   date: string;
 }
@@ -30,10 +30,20 @@ const { title, description, link, date } = Astro.props;
   <time class="mb-1 text-sm font-normal leading-none text-gray-300 dark:text-gray-400">
     {date}
   </time>
-  <h3 class="text-xl font-semibold text-white">{title}</h3>
-  <p class="mb-4 text-base font-normal text-gray-300 dark:text-gray-400">
+  <h3 class="text-xl font-semibold mt-3 text-white">{title}</h3>
+  
+  {Array.isArray(description) ? (
+  <ul class="mt-3 mb-4 list-disc pl-5 space-y-1 text-base font-normal text-gray-300 dark:text-gray-400">
+    {description.map((item) => (
+      <li>{item}</li>
+    ))}
+  </ul>
+) : (
+  <p class=" mb-4 text-base font-normal text-gray-300 dark:text-gray-400">
     {description}
   </p>
+)}
+
 
   {link && (
     <a
@@ -46,9 +56,9 @@ const { title, description, link, date } = Astro.props;
       target="_blank"
       rel="noopener noreferrer"
     >
-      Saber más ...
+      See Project
       <svg
-        class="w-3 h-3 ms-2 rtl:rotate-180"
+        class="w-3 h-3 ml-2 rtl:rotate-180"
         aria-hidden="true"
         xmlns="http://www.w3.org/2000/svg"
         fill="none"
