--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,28 +6,35 @@
   <div class="relative flex justify-center items-center w-full">
     <nav class="flex flex-row gap-x-10 opacity-90 text-white relative z-20">
       <a
-        href="/"
+        href="#Home"
         class="relative hover:text-purple-300 hover:drop-shadow-[0_0_15px_rgba(187,128,252,0.9)] transition duration-300 ease-in-out"
         onmouseenter="document.querySelector('.glass-reflect').classList.add('opacity-70')"
         onmouseleave="document.querySelector('.glass-reflect').classList.remove('opacity-70')"
         >Home</a
       >
       <a
-        href="/about"
+        href="#About"
         class="relative hover:text-purple-300 hover:drop-shadow-[0_0_15px_rgba(187,128,252,0.9)] transition duration-300 ease-in-out"
         onmouseenter="document.querySelector('.glass-reflect').classList.add('opacity-70')"
         onmouseleave="document.querySelector('.glass-reflect').classList.remove('opacity-70')"
         >About</a
       >
+        <a
+        href="#Experience"
+        class="relative hover:text-purple-300 hover:drop-shadow-[0_0_15px_rgba(187,128,252,0.9)] transition duration-300 ease-in-out"
+        onmouseenter="document.querySelector('.glass-reflect').classList.add('opacity-70')"
+        onmouseleave="document.querySelector('.glass-reflect').classList.remove('opacity-70')"
+        >Experience</a
+      >
       <a
-        href="/projects"
+        href="#Projects"
         class="relative hover:text-purple-300 hover:drop-shadow-[0_0_15px_rgba(187,128,252,0.9)] transition duration-300 ease-in-out"
         onmouseenter="document.querySelector('.glass-reflect').classList.add('opacity-70')"
         onmouseleave="document.querySelector('.glass-reflect').classList.remove('opacity-70')"
         >Projects</a
       >
       <a
-        href="/contact"
+        href="#Contact"
         class="relative hover:text-purple-300 hover:drop-shadow-[0_0_15px_rgba(187,128,252,0.9)] transition duration-300 ease-in-out"
         onmouseenter="document.querySelector('.glass-reflect').classList.add('opacity-70')"
         onmouseleave="document.querySelector('.glass-reflect').classList.remove('opacity-70')"
