--- a/src/components/SectionConteiner.astro
+++ b/src/components/SectionConteiner.astro
@@ -1,4 +1,8 @@
-<section class="w-full mx-auto lg:w-[800px] py-34 m-12">
+---
+const{class:className, id}=Astro.props;
+---
+
+<section id={id} class={"w-full mx-auto lg:w-[800px] py-34 m-12 ${className}"}>
     <slot />
 </section>
 
