--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import "../styles/global.css";
 import Header from "../components/Header.astro";
 // Supports weights 100-900
 import "@fontsource-variable/onest";
+import Footer from "../components/Footer.astro";
 interface Props {
   title: string;
   description: string;
@@ -31,6 +32,7 @@ const { description, title } = Astro.props;
       <div class="fixed inset-0 z-[-2] animate-breathing-top-light"> </div>
 
       <slot />
+      <Footer />
     </main>
   </body>
 </html>
@@ -41,8 +43,14 @@ const { description, title } = Astro.props;
   }
   html {
     font-family: "Onest Variable", system-ui, sans-serif;
+    scroll-behavior: smooth;
   }
   body {
     background: transparent;
+  }
+  @media(prefers-reduced-motion: reduce) {
+    html {
+      scroll-behavior: auto;
+    }
   }
 </style>
