--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -82,7 +82,7 @@ import BriefcaseIcon from "../components/icons/BriefcaseIcon.astro";
         </SocialPill> -->
 
         <SocialPill href="mailto:santiagosba888@gmail.com" label="Email">
-          <Mailicon class="w-5 h-5 icon glow" />
+          <Mailicon class="w-5 h-5 icon-glow" />
         </SocialPill>
 
         <a href="https://github.com/Santiagosba"> </a>
