--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,12 +28,13 @@ const { description, title } = Astro.props;
   <body class="relative bg-[#000] text-white min-h-screen flex flex-col">
     <Header class="relative z-10 bg-black" />
 
-    <main class="relative flex-grow z-0 mt-20">
-      <div class="fixed inset-0 z-[-2] animate-breathing-top-light"> </div>
+    <main class="relative flex-grow z-0 mt-20 px-4">
+      <div class="fixed inset-0 z-[-2] animate-breathing-top-light"></div>
 
       <slot />
       <Footer />
     </main>
+    
   </body>
 </html>
 
@@ -48,7 +49,7 @@ const { description, title } = Astro.props;
   body {
     background: transparent;
   }
-  @media(prefers-reduced-motion: reduce) {
+  @media (prefers-reduced-motion: reduce) {
     html {
       scroll-behavior: auto;
     }
