Footer Diseño Final,zona de proyectos,responsive y fondo de estrellas

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,20 +5,18 @@ import Mailicon from "./icons/Mailicon.astro";
 ---
 
 <footer
-  class="animate-fade-in w-full py-10 text-white/90 bg-transparent backdrop-blur-sm drop-shadow-[0_2px_6px_rgba(173,216,230,0.5)]"
+  class="flex-wrap animate-fade-in w-full py-10 text-white/90 bg-transparent backdrop-blur-sm drop-shadow-[0_2px_6px_rgba(173,216,230,0.5)]"
 >
   <div
     class="max-w-4xl mx-auto flex flex-col md:flex-row items-center justify-between gap-5 px-5 text-center"
   >
-    <!-- Texto -->
     <p
       class="ml-10 text-sm md:text-base font-medium tracking-wide drop-shadow-[0_1px_3px_rgba(173,216,230,0.5)]"
     >
       © 2025 Santiago Benítez Álvarez — Todos los derechos reservados
     </p>
 
-    <!-- Íconos sociales -->
-    <div class="flex gap-5 items-center mr-8">
+    <div class="flex gap-5 items-center mr-8 ml-14">
       <a
         href="https://es.linkedin.com/in/santiagosba"
         target="_blank"
