--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -34,7 +34,7 @@
         >Projects</a
       >
       <a
-        href="#Contact"
+        href="mailto:santiagosba888@gmail.com"
         class="relative hover:text-purple-300 hover:drop-shadow-[0_0_15px_rgba(187,128,252,0.9)] transition duration-300 ease-in-out"
         onmouseenter="document.querySelector('.glass-reflect').classList.add('opacity-70')"
         onmouseleave="document.querySelector('.glass-reflect').classList.remove('opacity-70')"
