fix-mobile-size

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,7 @@ import Projects from "../components/Projects.astro";
         alt="Santydev photo"
       />
       <h1
-        id="About"
+        
         class="ml-3 text-4xl md:text-5xl font-semibold text-white drop-shadow-[0_2px_6px_rgba(173,216,230,0.5)]
     mb-12 animate-fade-in tracking-wide"
       >
@@ -94,7 +94,7 @@ import Projects from "../components/Projects.astro";
       </nav>
     </SectionConteiner>
 
-    <SectionConteiner id="Experience">
+    <SectionConteiner id="Experience" class="min-h-screen">
       <h2
         class="mt-28 ml-3 text-4xl md:text-5xl font-semibold text-white drop-shadow-[0_2px_6px_rgba(173,216,230,0.5)]
     mb-12 animate-fade-in tracking-wide flex items-center gap-2"
